# ManyRecords

./: README.md  check-files-difference.py  machine-info.py  make-many-ce-same-records.py  make-many-qe-records.py  make-many-qe-same-records.py
CE/: cubic_data_1000_same.csv  mr-ce-pandas.py  mr-ce-polars.py  mr-ce-simple.py
QE/: mr-qe-pandas.py  mr-qe-use-csv.py  mr-qe-use-polars.py  qe_data_1000_same.csv
QE/Cpp/: CMakeLists.txt  README.md
QE/Cpp/include/: many_records.h
QE/Cpp/src/: main.cpp
